# cppm-homeworks

./: .gitignore  CMakeLists.txt
CalculateTwoNumbers/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
accounts/: CMakeLists.txt  main.cpp
addresses/: CMakeLists.txt  main.cpp
counter/: CMakeLists.txt  Counter.h  main.cpp
figures-sides-and-angles/: CMakeLists.txt  Figures.h  main.cpp
figures-sides-count/: CMakeLists.txt  Figure.h  main.cpp
months/: CMakeLists.txt  main.cpp
print-structure/: CMakeLists.txt  main.cpp
